--- a/login.html
+++ b/login.html
@@ -2,23 +2,16 @@
 <head>
     <meta charset="UTF-8">
     <title>SBS PROLINK - LOGIN</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/login.css">
-    <link rel="stylesheet" type="text/css" href="css/all.css">
-    <!-- Insert this line above script imports  -->
+    <link rel="stylesheet" type="text/css" href="render/css/main.css">
+    <link rel="stylesheet" type="text/css" href="render/css/login.css">
+    <link rel="stylesheet" type="text/css" href="render/css/all.css">
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-
-    <!-- normal script imports etc  -->
-    <script src="js/jquery-3.6.0.js"></script>
+    <script src="render/js/jquery-3.6.0.js"></script>
     <script src="render/login.js"></script>
-
-    <!-- Insert this line after script imports -->
     <script>if (window.module) module = window.module;</script>
-
-
   </head>
   <body>
-
+    <!-- TITLE BAR OF LOGIN WINDOW -->
     <div class="titlebar">
       <a class="titlebar-title">SBS <span>PROLINK</span></a>
       <div class="titlebar-drag"></div>
@@ -29,15 +22,19 @@
       </div>
     </div>
 
+    <!-- LOGIN FORM (api auth call with email & password) -->
     <div class="login-container">
-      <img class="logo" src="img/SBS_Logo_White.png" alt="">
-      <h2>ENTER LOGIN DETAILS</h2>
+      <img class="logo" src="render/img/SBS_Logo_White.png" alt="">
+      <h2>Welcome to Prolink, Please Log In.</h2>
+        <h3>STAFF AND ADMINISTRATIVE ACCOUNTS ONLY</h3>
       <div class="login-form">
-        <input id="email" type="email" name="email" placeholder="Email Address">
-        <input id="password" type="password" name="password" placeholder="Password">
-        <input type="checkbox" name="remember"><label class="checkbox-label">STAY SIGNED IN</label>
+          <label class="input-label">Email Address</label>
+        <input id="email" type="email" name="email" >
+          <label class="input-label">Password</label>
+        <input id="password" type="password" name="password" >
+        <input type="checkbox" name="remember"><label class="checkbox-label">STAY LOGGED IN</label>
         <input class="signup-button" type="submit" value="CREATE ACCOUNT">
-        <input id='login' class="login-button" type="submit" value="LOGIN">
+        <input id='login' class="login-button" type="submit" value="LOG IN">
       </div>
     </div>
   </body>
